playground/kyverno/test-verify-image-keyless.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-verify-image-keyless
spec:
  containers:
    - image: ghcr.io/kyverno/test-verify-image:signed-keyless
      name: container1
      resources:
        requests:
          cpu: 10m
          memory: 10Mi
        limits:
          cpu: 10m
          memory: 10Mi
      restartPolicy: Never
