playground/kyverno/test-verify-image.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: test-verify-image
  name: test-verify-image
spec:
  containers:
    - image: ghcr.io/kyverno/test-verify-image:signed
      name: test-verify-image
      resources:
        requests:
          cpu: 10m
          memory: 10Mi
        limits:
          cpu: 10m
          memory: 10Mi
      restartPolicy: Never
