playground/kyverno/cluster-policy-keyless.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-image-keyless
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: verify-image
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - imageReferences:
            - ghcr.io/kyverno/test-verify-image:*
          type: Cosign
          attestors:
            - count: 1
              entries:
                - keyless:
                    subject: "*@nirmata.com"
                    issuer: "https://accounts.google.com"
                    rekor:
                      url: https://rekor.sigstore.dev
                    ctlog:
                      ignoreSCT: false
